Agregando notacion Swagger al controlador de Productos
